[gd_scene load_steps=24 format=2]

[ext_resource path="res://sprites/buttons/Quiz.png" type="Texture" id=1]
[ext_resource path="res://fonts/ProductSans-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://displayScenes/MainMenu.gd" type="Script" id=3]
[ext_resource path="res://sprites/bg/BG1.png" type="Texture" id=4]
[ext_resource path="res://sprites/buttons/Start_down.png" type="Texture" id=5]
[ext_resource path="res://sprites/buttons/Start.png" type="Texture" id=6]
[ext_resource path="res://sprites/buttons/About.png" type="Texture" id=7]
[ext_resource path="res://sprites/buttons/Help.png" type="Texture" id=8]
[ext_resource path="res://sprites/buttons/About_down.png" type="Texture" id=9]
[ext_resource path="res://sprites/buttons/Help_down.png" type="Texture" id=10]
[ext_resource path="res://sprites/buttons/Quiz_down.png" type="Texture" id=11]
[ext_resource path="res://scenes/MusicPlayer.tscn" type="PackedScene" id=12]
[ext_resource path="res://sprites/overlay/1.png" type="Texture" id=13]
[ext_resource path="res://sprites/overlay/4.png" type="Texture" id=14]
[ext_resource path="res://sprites/overlay/2.png" type="Texture" id=15]
[ext_resource path="res://sprites/overlay/5.png" type="Texture" id=16]
[ext_resource path="res://sprites/overlay/3.png" type="Texture" id=17]
[ext_resource path="res://sprites/overlay/6.png" type="Texture" id=18]
[ext_resource path="res://sprites/buttons/Achievement.png" type="Texture" id=19]
[ext_resource path="res://sprites/buttons/Achievement_down.png" type="Texture" id=20]
[ext_resource path="res://sprites/buttons/Quiz_disabled.png" type="Texture" id=21]

[sub_resource type="DynamicFont" id=1]
size = 100
font_data = ExtResource( 2 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 13 ), ExtResource( 13 ), ExtResource( 13 ), ExtResource( 13 ), ExtResource( 13 ), ExtResource( 13 ), ExtResource( 13 ), ExtResource( 13 ), ExtResource( 13 ), ExtResource( 13 ), ExtResource( 13 ), ExtResource( 13 ), ExtResource( 13 ), ExtResource( 15 ), ExtResource( 17 ), ExtResource( 14 ), ExtResource( 16 ), ExtResource( 18 ) ],
"loop": true,
"name": "Outro",
"speed": 24.0
} ]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -1036.0
margin_top = -247.5
margin_right = 1036.0
margin_bottom = 247.5
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 2072.0
margin_bottom = 247.0
custom_fonts/font = SubResource( 1 )
text = "Let's Learn
English Vocabulary"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 251.0
margin_right = 2072.0
margin_bottom = 371.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
margin_left = 732.0
margin_right = 932.0
margin_bottom = 120.0
rect_min_size = Vector2( 200, 120 )
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 5 )
expand = true
stretch_mode = 3

[node name="Help" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
margin_left = 936.0
margin_right = 1136.0
margin_bottom = 120.0
rect_min_size = Vector2( 200, 120 )
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 10 )
expand = true
stretch_mode = 3

[node name="About" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
margin_left = 1140.0
margin_right = 1340.0
margin_bottom = 120.0
rect_min_size = Vector2( 200, 120 )
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 9 )
expand = true
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 375.0
margin_right = 2072.0
margin_bottom = 495.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exercise" type="TextureButton" parent="VBoxContainer/HBoxContainer2"]
margin_left = 764.0
margin_right = 1184.0
margin_bottom = 120.0
rect_min_size = Vector2( 420, 120 )
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 1 )
texture_hover = ExtResource( 11 )
texture_disabled = ExtResource( 21 )
expand = true
stretch_mode = 3

[node name="Achievement" type="TextureButton" parent="VBoxContainer/HBoxContainer2"]
margin_left = 1188.0
margin_right = 1308.0
margin_bottom = 120.0
rect_min_size = Vector2( 120, 120 )
texture_normal = ExtResource( 19 )
texture_pressed = ExtResource( 19 )
texture_hover = ExtResource( 20 )
expand = true
stretch_mode = 3

[node name="MusicPlayer" parent="." instance=ExtResource( 12 )]

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 640, 360 )
frames = SubResource( 2 )
animation = "Outro"
frame = 5

[connection signal="button_down" from="VBoxContainer/HBoxContainer/Start" to="." method="_on_Start_button_down"]
[connection signal="button_down" from="VBoxContainer/HBoxContainer/Help" to="." method="_on_Help_button_down"]
[connection signal="button_down" from="VBoxContainer/HBoxContainer/About" to="." method="_on_About_button_down"]
[connection signal="button_down" from="VBoxContainer/HBoxContainer2/Exercise" to="." method="_on_Exercise_button_down"]
[connection signal="button_down" from="VBoxContainer/HBoxContainer2/Achievement" to="." method="_on_Achievement_button_down"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
